Fix unnecessary scrollbar appearing

--- a/frontend/src/styles/Sidebar.module.scss
+++ b/frontend/src/styles/Sidebar.module.scss
@@ -7,7 +7,8 @@
 
 .sidebar {
 	flex-grow: 0;
-	width: 300px;
+	box-sizing: border-box;
+	width: 310px;
 	height: 100%;
 	border-top: 2px solid black;
 	padding: 5px;
